Fixed slider on mobile view

--- a/style.css
+++ b/style.css
@@ -516,7 +516,7 @@ h3 {
     }
 
     .merchant__pick__container .lead__image {
-        max-height: 400px;
+        max-height: 350px;
     }
 
 }
